--- a/src/components/button/sizes.css
+++ b/src/components/button/sizes.css
@@ -2,6 +2,7 @@
   --btn--padding-inline: 0.875rem;
   --btn--padding-block: 0.375rem;
   --btn--font-size: 0.75rem;
+   --btn--line-height: 1.3;
 
   --btn-square--padding-block: 0.375rem;
   --btn-circle--padding-block: 0.375rem;
@@ -11,6 +12,7 @@
   --btn--padding-inline: 1rem;
   --btn--padding-block: 0.5rem;
   --btn--font-size: 0.875rem;
+   --btn--line-height: 1.4;
 
   --btn-square--padding-block: 0.5rem;
   --btn-circle--padding-block: 0.5rem;
@@ -20,6 +22,7 @@
   --btn--padding-inline: 1.125rem;
   --btn--padding-block: 0.625rem;
   --btn--font-size: 1rem;
+   --btn--line-height: 1.5;
 
   --btn-square--padding-block: 0.625rem;
   --btn-circle--padding-block: 0.625rem;
@@ -29,6 +32,7 @@
   --btn--padding-inline: 1.25rem;
   --btn--padding-block: 0.75rem;
   --btn--font-size: 1.125rem;
+   --btn--line-height: 1.5;
 
   --btn-square--padding-block: 0.75rem;
   --btn-circle--padding-block: 0.75rem;
@@ -38,6 +42,7 @@
   --btn--padding-inline: 1.375rem;
   --btn--padding-block: 0.875rem;
   --btn--font-size: 1.25rem;
+  --btn--line-height: 1.5;
 
   --btn-square--padding-block: 0.875rem;
   --btn-circle--padding-block: 0.875rem;
@@ -47,6 +52,7 @@
   --btn--padding-inline: 1.5rem;
   --btn--padding-block: 1rem;
   --btn--font-size: 1.375rem;
+  --btn--line-height: 1.5;
 
   --btn-square--padding-block: 1rem;
   --btn-circle--padding-block: 1rem;
